[Task-#2] Fork/Join solution